--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,4 +3,12 @@ ktor {
         port = 8080
         port = ${?PORT}
     }
+
+    jwt {
+        secret = "secret"
+        issuer = "http://0.0.0.0:8080/"
+        audience = "http://0.0.0.0:8080/hello"
+        realm = "Access to 'hello'"
+    }
+
 }
