--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,9 @@ Icon
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
 
+# Enviroment variables
+application.conf
+
 # Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
